[package]
name = "udp-socket"
version = "0.1.5"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Advanced udp socket."
repository = "https://github.com/ipfs-rust/udp-socket"
license = "MIT OR Apache-2.0"

[features]
default = ["with-async-io"]
with-async-io = ["async-io", "futures-lite"]

[dependencies]
async-io = { version = "1.3.1", optional = true }
futures-lite = { version = "1.11.3", optional = true }
libc = "0.2.92"
socket2 = "0.4.0"

[dev-dependencies]
anyhow = "1.0.40"
async-global-executor = "2.0.2"
env_logger = "0.8.3"
log = "0.4.14"
